k8/3.app-config.yaml
# environment variables

# docker way
# docker run -e APP_COLOR=pink simple-webapp-color

# config map
# So there are two phases involved in configuring ConfigMaps. 
# First create the ConfigMaps 
# Second Inject them into the POD.

# Imperative: kubectl create configmap <config-name> --from-literal=<key>=<value>
# Declarative 
apiVersion: v1 
kind: Pod 
metadata:
  name: simple-webapp-color 
spec:
  containers:
  - name: simple-webapp-color
    image: simple-webapp-color 
    ports:
    - containerPort: 8080
volumes:
  - name: app-config-volume
    configMap:
      name: app-config
