k8/4.app-security-context-container.yaml
# If you configure it at a POD level, the settings will carry over to all the containers within the POD. 
# If you configure it at both the POD and the Container, the settings on the container will override the settings on the POD.

apiVersion: v1 
kind: Pod 
metadata:
  name: simple-webapp-color 
spec:
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "3600"]
    securityContext: 
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
