k8/4.app-security-context-pod.yaml

apiVersion: v1 
kind: Pod 
metadata:
  name: simple-webapp-color 
spec:
  securityContext: 
    runAsUser: 1000
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "3600"]
