k8/4.app-security-context.yaml
# environment variables

# docker way
# docker run -e APP_COLOR=pink simple-webapp-color

# config map
# So there are two phases involved in configuring ConfigMaps. 
# First create the ConfigMaps 
# Second Inject them into the POD.

# Imperative: kubectl create configmap <config-name> --from-literal=<key>=<value>
# Declarative 
apiVersion: v1 
kind: Pod 
metadata:
  name: simple-webapp-color 
spec:
  securityContext: 
    runAsUser: 1000
  containers:
  - name: ubuntu
    image: ubuntu
    command: ["sleep", "3600"]
    securityContext: 
      runAsUser: 1000
      capabilities:
        add: ["MAC_ADMIN"]
