k8/5.service-account.yaml
# how service account works
# first type: user -> by human (admin, developer etc...)
# second type: service -> by machine (monitoring application prometheus or jenkins etc...)

# notes
# when create service account: a token automatically created for that account to authenticate, it is secret object
# steps to create service account
# 1. creates the service account object
# 2. generates a token for the service account. 
# 3. creates a secret object
# 4. stores that token inside the secret object.
# 5. secret object is then linked to the service account.

# service account can be assigned with roles using (RBA) but it is out of scoped for CKAD
# extracting token is troublesome so we can automatically export service account token as a volume and mount it in POD
# by default a default service account is created in every namespace, when pod is created a default service account is mounted
# we cannot edit existing pod's service account
apiVersion: v1
kind: Pod
metadata:
  name: my-kubernetes-dashboard
spec:
  containers:
    - name: my-kubernetes-dashboard
      image: my-kubernetes-dashboard
  serviceAccount: dashboard-sa
  automountServiceAccountToken: false #if you dont want to automatically mount the service account
