k8/pod.yaml
apiVersion: v1
kind: Pod
metadata:
name: podinfo
spec:
  containers:
    - name: podinfo
      image: stefanprodan/podinfo:6.0.3
      ports:
        - containerPort: 9898
