k8/service.yaml
apiVersion: v1
kind: Service
metadata:
name: podinfo
spec:
  selector:
    run: podinfo
  ports:
    - port: 9898
      targetPort: 9898
      nodePort: 32036
